# bird-lg-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml  wrangler.toml
autopeer/: Cargo.toml
autopeer/src/: lib.rs
common/: Cargo.toml
common/src/: api.rs  auto_peer.rs  humanize.rs  lib.rs  models.rs  traceroute.rs  utils.rs  wireguard.rs
frontend/: .gitignore  Cargo.toml  build.sh  index.html  package.json  wrangler.toml
frontend/assets/: styles.css
frontend/src/: app.rs  components.rs  config.rs  hooks.rs  main.rs  models.rs  pages.rs  routes.rs  services.rs  store.rs  utils.rs
frontend/src/components/: cards.rs  content_modal.rs  data_table.rs  header.rs  main_view.rs  node_list.rs  protocol_modal.rs  protocols.rs  route_dropdown.rs  route_lookup.rs  shell.rs  status_banner.rs  traceroute.rs  wireguard.rs
frontend/src/components/shell/: button.rs  input.rs  line.rs  prompt.rs  select.rs  toggle.rs
frontend/src/hooks/: use_app_data.rs
frontend/src/pages/: auto_peer.rs  dn42.rs  main.rs  ncsi.rs  node.rs  peering.rs  protocol_page.rs
frontend/src/services/: api.rs  response_handler.rs  websocket.rs
frontend/src/store/: auto_peer.rs  lg_state.rs  modal.rs  route_info.rs  traceroute.rs
frontend/src/utils/: http.rs  traceroute.rs
frontend/worker/: worker.js  worker.ts
proxy/: Cargo.toml  config.json
proxy/src/: cli.rs  config.rs  handlers.rs  main.rs  services.rs
proxy/src/handlers/: bird.rs  peering.rs  traceroute.rs  wireguard.rs
proxy/src/middleware/: auth.rs
proxy/src/services/: bird.rs  traceroute.rs
server/: Cargo.toml  config.json
server/src/: cli.rs  config.rs  diff.rs  handlers.rs  main.rs  parser.rs  services.rs  state.rs  utils.rs
server/src/handlers/: info.rs  protocol.rs  route.rs  status.rs  traceroute.rs  ws.rs
server/src/services/: api.rs  poller.rs  request.rs  traceroute.rs
