[package]
name = "frontend"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
common = { path = "../common" }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
reqwasm = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "HtmlSelectElement",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Response",
    "KeyboardEvent",
] }
js-sys = "0.3"
chrono = { version = "0.4.42", features = ["serde"] }
ipnet = "2.11.0"
