[package]
name = "proxy"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.7"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
hyper = { version = "1.8.1", features = ["server"] }
ipnet = "2.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.17", features = ["codec", "io"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
