[package]
name = "server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
common = { path = "../common" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
ipnet = "2.11.0"
reqwest-streams = "0.12.0"
